argo-events/ci/event-gateway.yaml
apiVersion: argoproj.io/v1alpha1
kind: Gateway
metadata:
  name: github
spec:
  type: github
  eventSourceRef:
    name: github-event-source
  template:
    serviceAccountName: argo-events-sa
  service:
    ports:
      - port: 12000
        targetPort: 12000
  subscribers:
    http:
      - "http://github-sensor.argo-events.svc:9300/"
